respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Total_VAT__c</fullName>
        <formula>Total_VAT_Invoice_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgent_Payment_Needed__c</fullName>
        <label>Urgent Payment Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>[Old] VAT Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voyage__c</fullName>
        <formula>Shipments_Program__r.Voyage_Number_sp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voyage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_has_been_Rejected_ERD__c</fullName>
        <label>Why has been Rejected?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Why_has_been_Rejected_SI__c</fullName>
        <label>Why has been Rejected?</label>
        <type>TextArea</type>
    </fields>
    <label>Disbursement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Ref__c</columns>
        <columns>Disbursment_Concept__c</columns>
        <columns>Invoice_Amount_Exc__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Master_Allocation__c</columns>
        <columns>Sub_Allocation__c</columns>
        <columns>Shipment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Disbursement Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <recordTypes>
        <fullName>Disbursement</fullName>
        <active>true</active>
        <label>Disbursement</label>
    </recordTypes>
    <recordTypes>
        <fullName>DisbursementStatus</fullName>
        <active>true</active>
        <label>Disbursement BLOQ</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Credit_Note_Negative_Amount</fullName>
        <active>false</active>
        <errorConditionFormula>text(Type__c) == &apos;Credit Note&apos; &amp;&amp; Total_Incl_VAT__c &gt; 0</errorConditionFormula>
        <errorMessage>You can’t include these lines because Total(Incl. Vat) in the “Credit Note” Invoice must be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debit_Note_Positive_Amount</fullName>
        <active>false</active>
        <errorConditionFormula>text(Type__c) == &apos;Debit Note&apos; &amp;&amp; Total_Incl_VAT__c &lt; 0</errorConditionFormula>
        <errorMessage>You can´t include these lines because Total (Incl. VAT) in the &quot;Debit Note&quot; Invoice must be positive</errorMessage>
    </validationRules>
</CustomObject>